@@ -1,6 +1,11 @@
 	* Fix the inet_pton / inet_ntop import warnings:
 		- https://rt.cpan.org/Ticket/Display.html?id=55901
 		- Thanks to Todd Rinaldo for the patch.
+	* Fix listening on :: or 0.0.0.0 - a random address instead of
+		the specified would be used. Added test listen_port_only.t
+		- Regression from 2.57:
+		- https://rt.cpan.org/Ticket/Display.html?id=54656
+		- Thanks to Steffen Ullrich for the patch.
 
 2010-03-19 Shlomi Fish <shlomif@iglu.org.il>
 	* Syntax change to adapt for older Perls:
